# rtype

./: .gitignore  CMakeLists.txt  conanfile.txt
RFC/: rfc.txt
app/assets/: resources.txt
app/include/API/: IExtension.hpp
app/include/ECS/: ECS.hpp
app/include/client/Class/: Background.hpp  Client.hpp  GameLoop.hpp
app/include/client/Class/ADrawable/: ADrawable.hpp
app/include/client/Class/Animation/: Animation.hpp
app/include/client/Class/Background/: Background.hpp
app/include/client/Interfaces/: Drawable.hpp  IDrawable.hpp  IGame.hpp  IGameMenu.hpp
app/include/lib/: SFML.hpp  Utility.hpp  request.h  response.h
app/include/lib/ByteBuffer/: ByteBuffer.hpp
app/include/lib/Compression/: Compression.hpp
app/include/lib/DoubleHashmap/: DoubleHashmap.hpp
app/include/lib/DoubleQueue/: DoubleQueue.hpp
app/include/lib/Interfaces/: IServer.hpp
app/include/lib/Network/: AMessageHandler.hpp  ANetworkClient.hpp  IMessageHandler.hpp  INetworkClient.hpp  IPacket.hpp  NetworkHandler.hpp
app/include/server/Interfaces/: IServer.hpp
app/include/shared/Components/: Components.hpp
app/include/shared/MessageHandler/: TestMessageClientHandler.hpp  TestMessageHandler.hpp
app/include/shared/Packet/: ABasePacket.hpp  DamagePacket.hpp  DeathPacket.hpp  EndGamePacket.hpp  FirePacket.hpp  InstanciatePlayerPacket.hpp  MovePacket.hpp  PingPacket.hpp  PlayerEnterRoomPacket.hpp  PositionPacket.hpp  SpawnPacket.hpp  TestPacket.hpp
app/include/shared/Structs/: EntityHitboxs.hpp  EntityType.hpp
app/include/shared/Synchronizer/: PacketData.hpp  Synchronizer.hpp
app/lib/ByteBuffer/: ByteBuffer.cpp
app/lib/Server/TCPServer/: TCPServer.cpp
app/lib/Server/UDPServer/: UDPServer.cpp
app/src/client/: main.cpp
app/src/client/Class/: Background.cpp  Client.cpp  GameLoop.cpp  Window.cpp  Window.hpp
app/src/client/Interfaces/: Drawable.cpp
app/src/server/: main.cpp
app/tests/: main.test.cpp
app/tests/AServer/: AServer.test.cpp
app/tests/RTypeServer/: RTypeServer.test.cpp
app/tests/TCPServer/: TCPServer.test.cpp
(+91 files in other folders)
